--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,14 +1,14 @@
-# Brazilian Portuguese translations for libfm package.
+# Brazilian Portuguese translation for libfm.
 # Copyright (C) 2010 THE libfm'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the libfm package.
 # Og Maciel <ogmaciel@gnome.org>, 2010.
-# Sérgio Cipolla <secipolla@gmail.com>, 2010.
+# Sérgio Cipolla <secipolla@gmail.com>, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-06-13 23:53+0800\n"
+"POT-Creation-Date: 2011-06-13 22:28+0800\n"
 "PO-Revision-Date: 2011-06-11 20:17+0200\n"
 "Last-Translator: Sérgio <ikisham@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
@@ -827,8 +827,15 @@ msgstr "Disco óptico em branco"
 msgid "Optical Disc"
 msgstr "Disco óptico"
 
-#~ msgid "It's not a valid directory"
-#~ msgstr "Não é um diretório válido"
+#: ../src/gtk/fm-side-pane.c:49 ../src/gtk/fm-side-pane.c:297
+msgid "Places"
+msgstr "Locais"
 
-#~ msgid "The selection mode"
-#~ msgstr "Favor selecionar uma pasta"
+#: ../src/gtk/fm-side-pane.c:50 ../src/gtk/fm-side-pane.c:307
+msgid "Directory Tree"
+msgstr "Árvore de diretórios"
+
+#: ../src/gtk/fm-side-pane.c:51
+msgid "Remote"
+msgstr "Remoto"
+
