--- a/po/nl.po
+++ b/po/nl.po
@@ -7,15 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-06-13 23:53+0800\n"
-"PO-Revision-Date: 2011-06-13 12:10+0200\n"
-"Last-Translator: Pjotr\n"
+"POT-Creation-Date: 2011-06-11 19:32+0200\n"
+"PO-Revision-Date: 2011-06-13 19:19+0200\n"
+"Last-Translator: Pjotr <>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>Command line to execute:</b>"
@@ -153,7 +154,7 @@ msgstr "<b>Doel:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
 msgid "<b>Total Size of Files:</b>"
-msgstr "<b>Totale grootte van Bestanden:</b>"
+msgstr "<b>Totale omvang van Bestanden:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
 msgid "<b>_Group:</b>"
