Commit from LXDE Translation Project with Pootle by user mbouzada.: 186 of 186 messages translated (0 fuzzy).

--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-06-13 23:27+0200\n"
-"PO-Revision-Date: 2011-06-12 18:58+0200\n"
+"PO-Revision-Date: 2011-06-14 11:31+0200\n"
 "Last-Translator: mbouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -580,12 +580,11 @@ msgstr "Erro"
 
 #: ../src/gtk/fm-gtk-utils.c:55 ../src/gtk/fm-gtk-utils.c:67
 msgid "Confirm"
-msgstr ""
+msgstr "Confirmar"
 
 #: ../src/gtk/fm-gtk-utils.c:106
-#, fuzzy
 msgid "Question"
-msgstr "Descrición"
+msgstr "Pregunta"
 
 #: ../src/gtk/fm-gtk-utils.c:282
 msgid "Please select a folder"
