--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: libfm 0.1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-20 16:25+0200\n"
-"PO-Revision-Date: 2011-05-03 09:39+0200\n"
+"PO-Revision-Date: 2011-07-29 22:19+0200\n"
 "Last-Translator: Lutz <lthuns@opensuse.org>\n"
 "Language-Team: German\n"
 "Language: de\n"
@@ -74,7 +74,7 @@ msgid ""
 msgstr ""
 "<b>Eine Datei mit diesem Namen existiert bereits an diesem Ort.</b>\n"
 "\n"
-"Wollen sie die vorhandene Datei"
+"Wollen sie die vorhandene Datei "
 
 #: ../data/ui/ask-rename.glade.h:4
 msgid "Apply this option to all existing files"
@@ -122,7 +122,7 @@ msgstr "<b>Gruppe:</b>"
 
 #: ../data/ui/file-prop.glade.h:5
 msgid "<b>Last Access:</b>"
-msgstr "<b>Zugegriffen:</b>"
+msgstr "<b>LetzterZugriff:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
 msgid "<b>Last Modification:</b>"
